Add Homepege hero section

--- a/shrew/templates/base.html
+++ b/shrew/templates/base.html
@@ -131,6 +131,7 @@
       </div>
     </div>
   </nav>
+  {% block before_main_section %}{% endblock %}
   <section class="section">
     <div class="container">
       {% for message in messages %}
