--- a/shrew/templates/creations/home.html
+++ b/shrew/templates/creations/home.html
@@ -26,7 +26,7 @@
     </div>
     <div class="column video-outer is-two-fifths">
       <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/Z7o9pbPHu0k" frameborder="0" allow="autoplay; encrypted-media"
+        <iframe src="https://www.youtube.com/embed/O0wjz73QLuI" frameborder="0" allow="autoplay; encrypted-media"
                 allowfullscreen></iframe>
       </div>
     </div>
