Shorten the slogan

--- a/shrew/templates/creations/home.html
+++ b/shrew/templates/creations/home.html
@@ -8,7 +8,7 @@
         With <strong>Code Shrew</strong> you will learn programming basics by creating fun <strong>drawings</strong> and <strong>animations</strong>.
       </p>
       <p class="title">
-        Start <strong>playing with code</strong> right now!
+        Start <strong>playing with code</strong> now!
       </p>
       <div class="intro-buttons">
         <div>
