--- a/shrew/static/sass/_editor.scss
+++ b/shrew/static/sass/_editor.scss
@@ -24,12 +24,11 @@
 #editor-code {
   width: 100%;
   font-family: $family-monospace;
-  height: 23rem;
 }
 
 .CodeMirror {
   border: 2px solid $light;
-  height: 23rem;
+  height: 100%;
 }
 
 #name {
