--- a/shrew/templates/creations/home.html
+++ b/shrew/templates/creations/home.html
@@ -24,8 +24,8 @@
         </div>
       </div>
     </div>
-    <div class="column video-outer is-two-fifths">
-      <div class="video-container">
+    <div class="column embed-outer is-two-fifths">
+      <div class="embed-container">
         <iframe src="https://www.youtube.com/embed/jKhXLZ4wCdk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media"
                 allowfullscreen></iframe>
       </div>
