--- a/shrew/templates/micawber/video.html
+++ b/shrew/templates/micawber/video.html
@@ -1,5 +1,5 @@
-<div class="video-outer">
-  <div class="video-container">
+<div class="embed-outer">
+  <div class="embed-container">
     {{ response.html|safe }}
   </div>
 </div>
