--- a/shrew/templates/creations/profile.html
+++ b/shrew/templates/creations/profile.html
@@ -1,5 +1,7 @@
 {%  extends 'base.html' %}
 
+{% block title %}{{ user.username }} - {{ block.super }}{%  endblock %}
+
 {% block content %}
   <h1 class="title is-size-1">{{ user.username }}'s profile</h1>
   <h2 class="title is-size-2">Drawings & animations</h2>
