--- a/shrew/templates/pages/page-detail.html
+++ b/shrew/templates/pages/page-detail.html
@@ -1,6 +1,7 @@
 {%  extends 'base.html' %}
 {% load markup %}
 {% load micawber_tags %}
+{% load shrew_embed %}
 
 {% block title %}{{ page.name }} - {{ block.super }}{%  endblock %}
 
@@ -27,6 +28,6 @@
   <div class="content">
     <h1>{{ page.name }}</h1>
 
-    {{ page.text|commonmark|oembed_html }}
+    {{ page.text|shrew_embed|commonmark|oembed_html }}
   </div>
 {% endblock %}
