Add some visual padding to the embedded's editor output

--- a/shrew/static/sass/_editor.scss
+++ b/shrew/static/sass/_editor.scss
@@ -48,6 +48,7 @@
 
   &.embedded-code-output {
     background-color: $light !important;
+    padding: 0 5px;
     height: 2.5em;
     overflow: scroll;
     margin-bottom: 0;
