--- a/shrew/templates/creations/_editor.html
+++ b/shrew/templates/creations/_editor.html
@@ -20,21 +20,32 @@
 <div id="shrew-editor"
      class="saving-disabled {% if not owner %}unsaved{% endif %} {% if not request.user.is_authenticated %}unauthenticated{% endif %}">
   <div class="columns">
-    <div class="column is-one-fifth-desktop is-3">
-      <button id="save-button" class="button is-fullwidth">
-        <span class="caption">
-          {% if owner %}
-            Saved
-          {% else %}
-            <span class="icon">
-              <i class="fas fa-hdd"></i>
+    <div class="column is-3-desktop is-4">
+      <div class="field has-addons has-addons-fullwidth">
+        <div class="control">
+          <button id="save-button" class="button is-fullwidth">
+            <span class="caption">
+              {% if owner %}
+                Saved
+              {% else %}
+                <span class="icon">
+                  <i class="fas fa-hdd"></i>
+                </span>
+                <span>Save to my profile</span>
+              {% endif %}
             </span>
-            <span>Save to my profile</span>
-          {% endif %}
-        </span>
-        &nbsp;
-        <span class="time"></span>
-      </button>
+            &nbsp;
+            <span class="time"></span>
+          </button>
+        </div>
+        <div class="control view-buton-wrapper">
+          <button class="button view-button tooltip" data-tooltip="Preview & Share">
+            <span class="icon">
+              <i class="fas fa-share"></i>
+            </span>
+          </button>
+        </div>
+      </div>
     </div>
     <div id="name" class="column title">
       {% if creation is not None %}
