--- a/shrew/templates/base.html
+++ b/shrew/templates/base.html
@@ -16,6 +16,7 @@
     </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="With Code Shrew you will learn programming basics by creating fun drawings and animations. Start playing with code now!">
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/icons/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/icons/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/icons/favicon-16x16.png' %}">
@@ -27,8 +28,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/solid.css" integrity="sha384-TbilV5Lbhlwdyc4RuIV/JhD8NR+BfMrvz4BL5QFa2we1hQu6wvREr3v6XSRfCTRp" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/brands.css" integrity="sha384-7xAnn7Zm3QC1jFjVc1A6v/toepoG3JXboQYzbM0jrPzou9OFXm/fY6Z/XiIebl/k" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/fontawesome.css" integrity="sha384-ozJwkrqb90Oa3ZNb+yKFW2lToAWYdTiF1vt8JiH5ptTGHTGcN7qdoR1F95e0kYyG" crossorigin="anonymous">
+    {% block extrahead %}{% endblock %}
   </head>
-  <body>
+  <body class="{% block bodyclass %}{% endblock %}">
   <nav class="navbar has-shadow is-fixed-top">
     <div class="container">
       <div class="navbar-brand">
@@ -155,6 +157,7 @@
 
   {% compress js %}
     <script type="module" src="{% static 'js/editor.js' %}"></script>
+    <script type="module" src="{% static 'js/preview.js' %}"></script>
     <script type="module" src="{% static 'js/navbar.js' %}"></script>
     <script type="module" src="{% static 'js/messages.js' %}"></script>
   {% endcompress %}
