--- a/shrew/templates/creations/creation.html
+++ b/shrew/templates/creations/creation.html
@@ -6,6 +6,8 @@
 {% block extrahead %}
   <meta property="og:url" content="{% url 'creations:creation-detail' slug=creation.slug user=creation.author.username %}">
   <meta property="og:image" content="{% url 'creations:png-preview' slug=creation.slug user=creation.author.username %}">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
   <meta property="og:title" content="{{ content.name }}">
   <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5b49f4a84a104f0011ca67f3&product=sticky-share-buttons"></script>
 {% endblock %}
