Add the "Love" button

--- a/shrew/static/sass/main.scss
+++ b/shrew/static/sass/main.scss
@@ -7,6 +7,7 @@ $navbar-height: 7rem;
 @import "../../../node_modules/bulma/bulma";
 @import "../../../node_modules/bulma-divider/src/sass/index";
 @import "../../../node_modules/bulma-tooltip/src/sass/index";
+@import "../../../node_modules/bulma-badge/src/sass/index";
 
 @import "navbar";
 @import "hero-mascot";
