--- a/shrew/templates/creations/_creations_list.html
+++ b/shrew/templates/creations/_creations_list.html
@@ -21,3 +21,20 @@
     </div>
   {% endfor %}
 </div>
+
+{% if creations.paginator and creations.paginator.num_pages > 1 %}
+  <nav class="pagination" role="navigation" aria-label="pagination">
+  <a {% if creations.has_previous %}href="?page={{ creations.previous_page_number }}"{% endif %} class="pagination-previous"
+      {% if not creations.has_previous %}disabled{% endif %}>Previous</a>
+  <a {% if creations.has_next %}href="?page={{ creations.next_page_number }}"{% endif %} class="pagination-next"
+    {% if not creations.has_next %}disabled{% endif %}>Next page</a>
+  <ul class="pagination-list">
+    {% for page in creations.paginator.page_range %}
+      <li>
+        <a href="?page={{ page }}" class="{% if page == creations.number %}is-current{% endif %} pagination-link"
+           aria-label="Goto page {{ page }}">{{ page }}</a>
+      </li>
+    {% endfor %}
+  </ul>
+  </nav>
+{% endif %}
