--- a/shrew/templates/base.html
+++ b/shrew/templates/base.html
@@ -161,5 +161,10 @@
     <script type="module" src="{% static 'js/navbar.js' %}"></script>
     <script type="module" src="{% static 'js/messages.js' %}"></script>
   {% endcompress %}
+  <script>
+  (function (w,i,d,g,e,t,s) {w[d] = w[d]||[];t= i.createElement(g);
+    t.async=1;t.src=e;s=i.getElementsByTagName(g)[0];s.parentNode.insertBefore(t, s);
+  })(window, document, '_gscq','script','//widgets.getsitecontrol.com/145827/script.js');
+  </script>
   </body>
 </html>
