Add links to contact form

--- a/shrew/templates/base.html
+++ b/shrew/templates/base.html
@@ -54,6 +54,9 @@
           <a class="navbar-item" href="{% url 'pages:page-detail' slug='about' %}">
             About
           </a>
+          <a class="navbar-item" href="{% url 'contact_form' %}">
+            Contact
+          </a>
         </div>
         <div class="navbar-end">
           <div class="navbar-item">
@@ -148,9 +151,10 @@
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
-        Code Shrew 2018<br>
+        <i class="fas fa-copyright"></i> Code Shrew 2018<br>
         The site was created by <a href="https://ludwik.trammer.pl">Ludwik Trammer</a> and the lessons were designed by Jamie Nunez.<br>
-        See our <a href="{% url 'pages:page-detail' slug='terms' %}">Terms of Use</a> and <a href="{% url 'pages:page-detail' slug='privacy' %}">Privacy Policy</a>. Also note that <a href="{% url 'pages:page-detail' slug='cookies' %}">we use cookies</a>.
+        See our <a href="{% url 'pages:page-detail' slug='terms' %}">Terms of Use</a> and <a href="{% url 'pages:page-detail' slug='privacy' %}">Privacy Policy</a>.
+        We <a href="{% url 'pages:page-detail' slug='cookies' %}">use cookies</a>. We <i class="fas fa-heart"></i> <a href="{% url 'contact_form' %}">feedback</a>.
       </p>
     </div>
   </footer>
