--- a/shrew/templates/contact_form/contact_form_sent.html
+++ b/shrew/templates/contact_form/contact_form_sent.html
@@ -4,7 +4,7 @@
 {% block title %}Contact - {{ block.super }}{%  endblock %}
 
 {% block content %}
-  <article class="message is-primary">
+  <article class="message contact-message is-primary">
     <div class="message-header">
       <p>The message has been sent!</p>
     </div>
