--- a/shrew/templates/base.html
+++ b/shrew/templates/base.html
@@ -164,6 +164,7 @@
     <script type="module" src="{% static 'js/preview.js' %}"></script>
     <script type="module" src="{% static 'js/navbar.js' %}"></script>
     <script type="module" src="{% static 'js/messages.js' %}"></script>
+    <script type="module" src="{% static 'js/colors-table.js' %}"></script>
   {% endcompress %}
   </body>
 </html>
