Fix the "Preview & Share" tooltip not showing up in the embedded editor

--- a/shrew/templates/creations/_editor.html
+++ b/shrew/templates/creations/_editor.html
@@ -39,7 +39,7 @@
           </button>
         </div>
         <div class="control view-buton-wrapper">
-          <button id="preview-button" class="button view-button tooltip" data-tooltip="Preview & Share">
+          <button id="preview-button" class="button view-button tooltip is-tooltip-bottom" data-tooltip="Preview & Share">
             <span class="icon">
               <i class="fas fa-share"></i>
             </span>
