Fix contact form layout on tablet

--- a/shrew/templates/about.html
+++ b/shrew/templates/about.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="is-divider-vertical"></div>
-    <div class="column is-half">
+    <div class="column">
       <h2 class="title is-size-3">Contact Us</h2>
       <form method="post" action="{% url 'contact_form' %}">
         {% csrf_token %}
