New "About" text

--- a/shrew/templates/about.html
+++ b/shrew/templates/about.html
@@ -14,11 +14,19 @@
 
         <p>
           Code Shrew is a platform for <strong>learning and practicing basic concepts of programming</strong>.
-          In its heart is a programming environment where you can <strong>play with code by creating drawings and animations</strong> using a simple Python-like syntax.
-          It is accompanied by an <strong>interactive course</strong> presenting a variety of fundamental programming concepts using the environment.
+          It enables people to create fun <strong>drawings and animations</strong> using computer code.
+          It has a simple Python-like syntax and is designed to teach modern <strong>object-oriented programing</strong> techniques: one draws by creating objects and animates by changing their properties.
+          This way, the resulting animations, while fantastic in their own right, can also be seen as intuitive <strong>real-time visualizations</strong> of the code's logic.
         </p>
+
         <p>
-          The tool and the site were built by <strong>Ludwik Trammer</strong> and all the lessons were created by <strong>Jamie Nunez</strong>.
+          The software is accompanied by <strong>a course</strong> using the platform to present a set of fundamental programming concepts.
+          Each lesson is based around a <strong>single central idea</strong> which is presented in a <strong>video</strong>, expanded in a <strong>text form</strong>, and then reinforced by <strong>interactive examples</strong>, which students can play with freely.
+          We subscribe to the <strong>constructionist learning theory</strong>. We want to give students the necessary tools to realize <strong>their own creative ideas</strong>, instead of forcing them to follow predefined paths.
+        </p>
+
+        <p>
+          <strong>Ludwik Trammer</strong> built the tool and the site, and <strong>Jamie Nunez</strong> created the lessons and challenges. We started the site as a project for a graduate class at Georgia Tech - <strong>cs6460 Educational Technology</strong>. You will soon be able to read our paper about creating Code Shrew.
         </p>
 
         <h2>Technology</h2>
