--- a/shrew/templates/base.html
+++ b/shrew/templates/base.html
@@ -151,7 +151,7 @@
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
-        <i class="fas fa-copyright"></i> Code Shrew 2018<br>
+        <i class="fas fa-copyright"></i> <a href="{% url 'about' %}">Code Shrew</a> 2018<br>
         The site was created by <a href="https://ludwik.trammer.pl">Ludwik Trammer</a> and the lessons were designed by Jamie Nunez.<br>
         See our <a href="{% url 'pages:page-detail' slug='terms' %}">Terms of Use</a> and <a href="{% url 'pages:page-detail' slug='privacy' %}">Privacy Policy</a>.
         We <a href="{% url 'pages:page-detail' slug='cookies' %}">use cookies</a>. We <i class="fas fa-heart"></i> <a href="{% url 'about' %}">feedback</a>.
