Use pollyfill.io

--- a/shrew/templates/base.html
+++ b/shrew/templates/base.html
@@ -159,6 +159,8 @@
     </div>
   </footer>
 
+  {# Mostly because IE 11 doesn't know about Symbol #}
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
   {% compress js %}
     <script type="module" src="{% static 'js/editor.js' %}"></script>
     <script type="module" src="{% static 'js/preview.js' %}"></script>
