--- a/shrew/templates/creations/interpreter-sandbox.html
+++ b/shrew/templates/creations/interpreter-sandbox.html
@@ -13,6 +13,7 @@
   <body>
     <div id="drawing"></div>
 
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     {% compress js %}
       <script type="skulpt-module" src="{% static 'skulpt-modules/shrew.py' %}"></script>
       <script type="skulpt-module-es6" src="{% static 'skulpt-modules/icons.js' %}"></script>
