Broader use of pollyfills

--- a/shrew/templates/base.html
+++ b/shrew/templates/base.html
@@ -160,7 +160,7 @@
   </footer>
 
   {# Mostly because IE 11 doesn't know about Symbol #}
-  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+  <script src="https://polyfill.io/v2/polyfill.js=features=default,es5,es6"></script>
   {% compress js %}
     <script type="module" src="{% static 'js/editor.js' %}"></script>
     <script type="module" src="{% static 'js/preview.js' %}"></script>
