--- a/shrew/templates/creations/editor-embedded.html
+++ b/shrew/templates/creations/editor-embedded.html
@@ -17,8 +17,8 @@
   {% include "creations/_editor.html" %}
   <div id="code-output" class="embedded-code-output"></div>
 
-  <script src="https://polyfill.io/v2/polyfill.js=features=default,es5,es6"></script>
   {% compress js %}
+    <script type="module" src="{% static 'js/polyfill.js' %}"></script>
     <script type="module" src="{% static 'js/editor.js' %}"></script>
   {% endcompress %}
   </body>
