Add an outdated browser warning

--- a/shrew/static/sass/main.scss
+++ b/shrew/static/sass/main.scss
@@ -8,6 +8,8 @@ $navbar-height: 7rem;
 @import "../../../node_modules/bulma-divider/src/sass/index";
 @import "../../../node_modules/bulma-tooltip/src/sass/index";
 @import "../../../node_modules/bulma-badge/src/sass/index";
+@import "../../../node_modules/outdated-browser-rework/style";
+
 
 @import "navbar";
 @import "hero-mascot";
