Revert "Remove IE 11 compatibility (didn't work after all)"
This reverts commit e4697dbc11ebf7ef81b546a3c104e85b90f0fe76.

--- a/shrew/templates/base.html
+++ b/shrew/templates/base.html
@@ -164,6 +164,7 @@
     <script type="module" src="{% static 'js/outdated-browser.js' %}"></script>
   {% endcompress %}
   {% compress js %}
+    <script type="module" src="{% static 'js/polyfill.js' %}"></script>
     <script type="module" src="{% static 'js/editor.js' %}"></script>
     <script type="module" src="{% static 'js/preview.js' %}"></script>
     <script type="module" src="{% static 'js/navbar.js' %}"></script>
