--- a/shrew/templates/creations/editor-embedded.html
+++ b/shrew/templates/creations/editor-embedded.html
@@ -18,6 +18,7 @@
   <div id="code-output" class="embedded-code-output"></div>
 
   {% compress js %}
+    <script type="module" src="{% static 'js/polyfill.js' %}"></script>
     <script type="module" src="{% static 'js/editor.js' %}"></script>
   {% endcompress %}
   </body>
