--- a/shrew/templates/creations/interpreter-sandbox.html
+++ b/shrew/templates/creations/interpreter-sandbox.html
@@ -14,6 +14,7 @@
     <div id="drawing"></div>
 
     {% compress js %}
+      <script type="module" src="{% static 'js/polyfill.js' %}"></script>
       <script type="skulpt-module" src="{% static 'skulpt-modules/shrew.py' %}"></script>
       <script type="skulpt-module-es6" src="{% static 'skulpt-modules/icons.js' %}"></script>
       <script type="module" src="{% static 'js/interpreter-sandbox.js' %}"></script>
