--- a/shrew/templates/creations/home.html
+++ b/shrew/templates/creations/home.html
@@ -26,7 +26,7 @@
     </div>
     <div class="column embed-outer is-two-fifths">
       <div class="embed-container">
-        <iframe src="https://www.youtube.com/embed/jKhXLZ4wCdk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media"
+        <iframe src="https://www.youtube.com/embed/IhGVlEu0gv8?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media"
                 allowfullscreen></iframe>
       </div>
     </div>
