--- a/shrew/templates/creations/home.html
+++ b/shrew/templates/creations/home.html
@@ -1,4 +1,11 @@
 {%  extends 'base.html' %}
+{% load static %}
+
+{% block extrahead %}
+  <meta property="og:image" content="{% static 'images/logo_facebook.png' %}">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+{% endblock %}
 
 {% block before_main_section %}
 <section class="hero hero-intro is-primary is-bold">
