--- a/shrew/templates/creations/home.html
+++ b/shrew/templates/creations/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extrahead %}
-  <meta property="og:image" content="{% static 'images/logo_facebook.png' %}">
+  <meta property="og:image" content="https://{{ request.get_host }}{% static 'images/logo_facebook.png' %}">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
 {% endblock %}
