--- a/shrew/templates/creations/creation.html
+++ b/shrew/templates/creations/creation.html
@@ -17,63 +17,93 @@
 {% block bodyclass %}preview{% endblock %}
 
 {% block content %}
-    <div class="preview-pane">
-        <div class="sandbox-wrapper">
-          <iframe id="interpreter-sandbox" scrolling="no" src="{% url 'creations:interpreter-sandbox' %}"
-              sandbox="allow-scripts"></iframe>
-        </div>
+  <div class="modal" id="delete-modal">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+      <header class="modal-card-head">
+        <p class="modal-card-title">Are you sure?</p>
+        <button class="delete" aria-label="close"></button>
+      </header>
+      <section class="modal-card-body">
+        <p>Do you want to delete 	“{{ creation.name }}” <strong>permanently</strong>? You will not be able to undo this action.</p>
+      </section>
+      <footer class="modal-card-foot">
+        <form method="post" action="{% url 'creations:creation-remove' slug=creation.slug user=creation.author %}">
+          {% csrf_token %}
+          <button type="submit" class="button is-danger">Yes, delete</button>
+          <button type="button" class="button cancel">Cancel</button>
+        </form>
+      </footer>
     </div>
-    <pre id="preview-code">{{ creation.code }}</pre>
-
-    <div class="description has-text-centered">
-      <h1 class="title creation-title is-1 ">{{ creation.name }}</h1>
-      <p class="subtitle is-4">
-        by <a href="{% url 'creations:user-profile' user=creation.author.username %}">{{ creation.author.username }}</a>
-      </p>
-
-      <p class="has-text-grey">
-        Created <span id="creation-time" title="{{ creation.created|date:"DATETIME_FORMAT" }}"
-                      datetime="{{ creation.created|date:'c' }}">{{ creation.created|naturaltime }}</span>.
-        {% if creation.base %}
-          <br>Based on <a href="{{ creation.base.get_absolute_url }}">{{ creation.base.name }}</a>
-          by <a href="{% url 'creations:user-profile' user=creation.base.author.username %}">{{ creation.base.author.username }}</a>.
-        {% endif %}
-      </p>
-
-      <div class="buttons is-centered preview-actions">
-        <a class="button button-edit is-primary is-medium" href="{% url 'creations:editor-creation' slug=creation.slug user=creation.author.username %}">
-          <span class="icon is-small">
-            <i class="fas fa-edit"></i>
-          </span>
-          <span>
-            {% if request.user == creation.author %}
-              Edit
-            {% else %}
-              View Code and Remix
-            {% endif %}
-          </span>
-        </a>
-
-        <button data-network="sharethis" class="st-custom-button button button-edit is-light is-medium">
-          <span class="icon is-small">
-            <i class="fas fa-share-alt"></i>
-          </span>
-          <span>
-            Share
-          </span>
-        </button>
-
-        <button class="button is-danger is-medium {% if not user_loves %}is-outlined{% endif %} {% if loving_count %}badge{% endif %} is-badge-danger"
-                id="love" data-is-authenticated="{{ request.user.is_authenticated|yesno:"1,0" }}"
-                data-slug="{{ creation.slug }}" data-author="{{ creation.author.username }}"
-                data-active="{{ user_loves|yesno:"1,0" }}" data-badge="{{ loving_count }}">
-          <span class="icon is-small">
-            <i class="fas fa-heart"></i>
-          </span>
-          <span class="love-label">
-            {{ user_loves|yesno:"Unlove,Love" }}
-          </span>
-        </button>
+  </div>
+  <div class="preview-pane">
+      <div class="sandbox-wrapper">
+        <iframe id="interpreter-sandbox" scrolling="no" src="{% url 'creations:interpreter-sandbox' %}"
+            sandbox="allow-scripts"></iframe>
       </div>
+  </div>
+  <pre id="preview-code">{{ creation.code }}</pre>
+
+  <div class="description has-text-centered">
+    <h1 class="title creation-title is-1 ">{{ creation.name }}</h1>
+    <p class="subtitle is-4">
+      by <a href="{% url 'creations:user-profile' user=creation.author.username %}">{{ creation.author.username }}</a>
+    </p>
+
+    <p class="has-text-grey">
+      Created <span id="creation-time" title="{{ creation.created|date:"DATETIME_FORMAT" }}"
+                    datetime="{{ creation.created|date:'c' }}">{{ creation.created|naturaltime }}</span>.
+      {% if creation.base %}
+        <br>Based on <a href="{{ creation.base.get_absolute_url }}">{{ creation.base.name }}</a>
+        by <a href="{% url 'creations:user-profile' user=creation.base.author.username %}">{{ creation.base.author.username }}</a>.
+      {% endif %}
+    </p>
+
+    <div class="buttons is-centered preview-actions">
+      <a class="button button-edit is-primary is-medium" href="{% url 'creations:editor-creation' slug=creation.slug user=creation.author.username %}">
+        <span class="icon is-small">
+          <i class="fas fa-edit"></i>
+        </span>
+        <span>
+          {% if request.user == creation.author %}
+            Edit
+          {% else %}
+            View Code and Remix
+          {% endif %}
+        </span>
+      </a>
+
+    {% if request.user == creation.author %}
+      <button class="button is-medium is-dark is-outlined" id="delete-button">
+        <span class="icon is-small">
+          <i class="fas fa-trash"></i>
+        </span>
+        <span>
+          Remove
+        </span>
+      </button>
+    {% endif %}
+
+      <button data-network="sharethis" class="st-custom-button button button-edit is-light is-medium">
+        <span class="icon is-small">
+          <i class="fas fa-share-alt"></i>
+        </span>
+        <span>
+          Share
+        </span>
+      </button>
+
+      <button class="button is-danger is-medium {% if not user_loves %}is-outlined{% endif %} {% if loving_count %}badge{% endif %} is-badge-danger"
+              id="love" data-is-authenticated="{{ request.user.is_authenticated|yesno:"1,0" }}"
+              data-slug="{{ creation.slug }}" data-author="{{ creation.author.username }}"
+              data-active="{{ user_loves|yesno:"1,0" }}" data-badge="{{ loving_count }}">
+        <span class="icon is-small">
+          <i class="fas fa-heart"></i>
+        </span>
+        <span class="love-label">
+          {{ user_loves|yesno:"Unlove,Love" }}
+        </span>
+      </button>
     </div>
+  </div>
 {% endblock %}
