Longer timeouts in preview mode

--- a/shrew/templates/creations/creation.html
+++ b/shrew/templates/creations/creation.html
@@ -38,7 +38,7 @@
   </div>
   <div class="preview-pane">
       <div class="sandbox-wrapper">
-        <iframe id="interpreter-sandbox" scrolling="no" src="{% url 'creations:interpreter-sandbox' %}"
+        <iframe id="interpreter-sandbox" scrolling="no" src="{% url 'creations:interpreter-sandbox' %}?preview"
             sandbox="allow-scripts"></iframe>
       </div>
   </div>
