--- a/shrew/templates/creations/home.html
+++ b/shrew/templates/creations/home.html
@@ -44,8 +44,8 @@
 {% block content %}
   <h1 class="title is-2" id="featured">Latest featured drawings & animations</h1>
   <h2 class="title is-3" id="basic">Basic</h2>
-    {% include 'creations/_creations_list.html' with creations=featured_basic anchor='#basic' %}
+    {% include 'creations/_creations_list.html' with page_name='page_basic' creations=featured_basic anchor='#basic' %}
 
   <h2 class="title is-3" id="advanced">Advanced</h2>
-    {% include 'creations/_creations_list.html' with creations=featured_advanced anchor='#advanced' %}
+    {% include 'creations/_creations_list.html' with page_name='page_advanced' creations=featured_advanced anchor='#advanced' %}
 {% endblock %}
