Add a link to the paper

--- a/shrew/templates/about.html
+++ b/shrew/templates/about.html
@@ -26,7 +26,8 @@
         </p>
 
         <p>
-          <strong>Ludwik Trammer</strong> built the tool and the site, and <strong>Jamie Nunez</strong> created the lessons and challenges. We started the site as a project for a graduate class at Georgia Tech - <strong>cs6460 Educational Technology</strong>. You will soon be able to read our paper about creating Code Shrew.
+          <strong>Ludwik Trammer</strong> built the tool and the site, and <strong>Jamie Nunez</strong> created the lessons and challenges. We started the site as a project for a graduate class at Georgia Tech - <strong>cs6460 Educational Technology</strong>.
+          If you want to know more, you can <a href="https://arxiv.org/abs/1808.01100">read our paper about Code Shrew</a>.
         </p>
 
         <h2>Technology</h2>
