Add a Facebook link

--- a/shrew/templates/base.html
+++ b/shrew/templates/base.html
@@ -156,6 +156,12 @@
         See our <a href="{% url 'pages:page-detail' slug='terms' %}">Terms of Use</a> and <a href="{% url 'pages:page-detail' slug='privacy' %}">Privacy Policy</a>.
         We <a href="{% url 'pages:page-detail' slug='cookies' %}">use cookies</a>. We <i class="fas fa-heart"></i> <a href="{% url 'about' %}">feedback</a>.
       </p>
+      <a class="button button-facebook is-link is-small" href="https://www.facebook.com/code.shrew/">
+        <span class="icon is-small">
+          <i class="fab fa-facebook"></i>
+        </span>
+        <span>Code Shrew on Facebook</span>
+      </a>
     </div>
   </footer>
   <div id="outdated"></div>
